# agent-one

./: .env.example  .gitignore  CLAUDE.md  MOBILE_QUICKSTART.md  QUICKSTART.md  SETUP_COMPLETE.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  IMPLEMENTATION.md  README.md  STRUCTURE.md  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_phase2_tables.py  003_phase3_tables.py  004_phase5_memory.py  005_phase7_wellbeing.py  006_phase8_briefing.py  007_phase9_predicted_patterns.py  008_phase10_integrations.py  (+1 more)
backend/app/: __init__.py  main.py
backend/tests/: BUG_REPORT.md  QUICKSTART.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_agent_api.py  test_agent_supervisor.py  test_auth.py  test_brain.py  test_brain_dump.py  test_briefing_api.py  test_briefing_models.py  test_briefing_scheduler.py  test_briefing_schemas.py  test_briefing_service.py  test_calendar_service.py  test_chat.py  test_context_builder.py  test_dashboard.py  test_email_service.py  test_encryption.py  test_gamification.py  test_graphiti_client.py  test_integration_api.py  test_integration_models.py  test_integration_scheduler.py  test_integration_schemas.py  test_intervention_engine.py  test_memory_api.py  test_memory_e2e.py  test_memory_schemas.py  test_memory_service.py  test_modules.py  test_n8n_service.py  test_nlp_analyzer.py  test_nudges.py  test_pattern_analyzer.py  test_personality.py  test_prediction_analyzer.py  (+20 more)
docs/: STATUS.md  (+8 more)
(+316 files in other folders)
